--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,8 @@ steps:
     npm run build
     node app.js 
   displayName: 'npm install and build'
+- task: CopyFiles@2
+  inputs:
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+  
