--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ steps:
   displayName: 'npm install and build'
 - task: CopyFiles@2
   inputs:
-    Contents: '**'
+    Contents: '**/*.*'
     TargetFolder: '$(build.artifactstagingdirectory)'
   
