--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,9 @@ steps:
   inputs:
     Contents: '**/*.*'
     TargetFolder: '$(build.artifactstagingdirectory)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
   
